# thaumcraft4-research-bot

./: .gitignore  README.md  pyproject.toml  regression.py  repro.py  test_e2e.py  test_ocr.py
.github/workflows/: build.yml  release.yml
src/: __main__.py  gui.py
src/solvers/: ringsolver.py
src/utils/: aspects.py  colors.py  config.py  count_ocr.py  finder.py  grid.py  mouseactions.py  renderer.py  window.py
