[project]
name = "thaumcraft4-research-bot"
version = "1.3.0"
description = "Screenshot-based Thaumcraft 4 research-minigame solver bot (fork: + inventory-count OCR)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.4.0",
    "pyautogui>=0.9.54",
    "numpy>=2.2.0",
    "keyboard>=0.13.5",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "nuitka>=2.8.9",
    "ruff>=0.6.7",
]
[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
main = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
